--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
         <img src="./public/external/logohelio3302-tud-200h.png" alt="" class="block">
         <img src="./public/external/untitleddesign133302-e547-200h.png" alt="" class="block">
     </div>
-    <a href="https://drive.google.com/file/d/1PU4Efnk2ZrVabHkYGQ1Bplixed_P6eLm/view" class="action-button-in-section-1 text-white-color hovered-link block" style="margin:auto;">PORTFOLIO</a>
+    <a href="https://drive.google.com/file/d/1PU4Efnk2ZrVabHkYGQ1Bplixed_P6eLm/view" class="action-button-in-section-1 text-white-color hovered-link block" style="margin:auto;text-aligh:center;">PORTFOLIO</a>
     <div class="section-title-container flex" id="contact">
         <p class="text-main-blue-color larger-text">
             Contact Us Today
