--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
         .section-3-content-container {
             height : 50vh;
             width : 30%;
-            min-width: 200px;
-            max-width : 240px;
+            min-width: 230px;
+            max-width : 250px;
             max-height: 300px;
             min-height: 250px;
             background-color: #efefef;
@@ -536,7 +536,7 @@
         <img src="./public/external/logohelio3302-tud-200h.png" alt="" class="block">
         <img src="./public/external/untitleddesign133302-e547-200h.png" alt="" class="block">
     </div>
-    <a href="https://drive.google.com/file/d/1PU4Efnk2ZrVabHkYGQ1Bplixed_P6eLm/view" class="action-button-in-section-1 text-white-color hovered-link">PORTFOLIO</a>
+    <a href="https://drive.google.com/file/d/1PU4Efnk2ZrVabHkYGQ1Bplixed_P6eLm/view" class="action-button-in-section-1 text-white-color hovered-link block" style="margin:8px auto;">PORTFOLIO</a>
     <div class="section-title-container flex" id="contact">
         <p class="text-main-blue-color larger-text">
             Contact Us Today
