--- a/index.html
+++ b/index.html
@@ -536,7 +536,9 @@
         <img src="./public/external/logohelio3302-tud-200h.png" alt="" class="block">
         <img src="./public/external/untitleddesign133302-e547-200h.png" alt="" class="block">
     </div>
-    <a href="https://drive.google.com/file/d/1PU4Efnk2ZrVabHkYGQ1Bplixed_P6eLm/view" class="action-button-in-section-1 text-white-color hovered-link block" style="margin:8px auto;">PORTFOLIO</a>
+    <div class="flex" style="justify-content: center; align-items; center; width : 100%; height: max-content;">
+        <a href="https://drive.google.com/file/d/1PU4Efnk2ZrVabHkYGQ1Bplixed_P6eLm/view" class="action-button-in-section-1 text-white-color hovered-link block" style="text-align: center;">PORTFOLIO</a>
+    </div>
     <div class="section-title-container flex" id="contact">
         <p class="text-main-blue-color larger-text">
             Contact Us Today
